Resolved python-twisted-core dependency (required for rosbridge_suite)

--- a/rosdeps.yaml
+++ b/rosdeps.yaml
@@ -22,3 +22,7 @@ python-scipy:
   osx:
     homebrew:
       packages: [homebrew/python/scipy]
+python-twisted-core:
+  osx:
+    pip:
+      packages: [twisted]
